--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     // Register Service Worker
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('./sw.js')  // Changed from '/sw.js' to './sw.js'
           .then(registration => {
             console.log('ServiceWorker registration successful');
           })
